--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -4,34 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:focusable="true"
     android:focusableInTouchMode="true"
+    android:focusable="true"
     tools:context=".zalo.views.home.fragments.group_fragment.create_group_activity.CreateGroupActivity">
 
-    <ImageButton
-        android:id="@+id/uploadPictureImgButton"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:clickable="true"
+        android:id="@+id/uploadAvatarImgView"
         android:layout_width="@dimen/size_huge_48dp"
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/size_medium_16dp"
         android:layout_marginLeft="@dimen/size_medium_16dp"
         android:layout_marginTop="@dimen/size_small_8dp"
-        android:background="@drawable/upload_picture"
+        android:src="@drawable/upload_picture"
         android:contentDescription="@string/description_avatar"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:focusable="true" />
 
-    <com.google.android.material.textfield.TextInputEditText
+    <EditText
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/groupNameEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/size_medium_16dp"
         android:layout_marginRight="@dimen/size_medium_16dp"
-        android:imeOptions="actionDone"
+        android:layout_marginLeft="@dimen/size_medium_16dp"
         android:hint="@string/description_name_group"
-        app:layout_constraintBottom_toBottomOf="@id/uploadPictureImgButton"
-        app:layout_constraintLeft_toRightOf="@id/uploadPictureImgButton"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/uploadPictureImgButton" />
+        android:inputType="text"
+        android:imeOptions="actionDone"
+        app:layout_constraintBottom_toBottomOf="@id/uploadAvatarImgView"
+        app:layout_constraintLeft_toRightOf="@id/uploadAvatarImgView"
+        app:layout_constraintTop_toTopOf="@id/uploadAvatarImgView" />
 
     <SearchView
         android:id="@+id/searchView"
@@ -44,7 +48,7 @@
         android:queryHint="@string/hint_search_clicked"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/uploadPictureImgButton"/>
+        app:layout_constraintTop_toBottomOf="@id/uploadAvatarImgView"/>
 
     <TextView
         android:id="@+id/searchViewDescTV"
@@ -88,27 +92,31 @@
         app:layout_constraintTop_toBottomOf="@id/tabLayout" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@android:color/darker_gray"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/selectedListLayout"
+        android:visibility="gone"
+        android:background="@android:drawable/editbox_background"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <androidx.recyclerview.widget.RecyclerView
+            android:paddingLeft="@dimen/size_small_8dp"
+            android:paddingRight="@dimen/size_small_8dp"
+            android:id="@+id/recyclerView"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@id/confirmButton"
-            app:layout_constraintBottom_toBottomOf="@id/confirmButton"
-            app:layout_constraintRight_toLeftOf="@id/confirmButton"
+            app:layout_constraintTop_toTopOf="@id/createGroupButton"
+            app:layout_constraintBottom_toBottomOf="@id/createGroupButton"
+            app:layout_constraintRight_toLeftOf="@id/createGroupButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
         <ImageButton
             android:background="@drawable/go"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:id="@+id/confirmButton"
+            android:id="@+id/createGroupButton"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_width="@dimen/size_huge_48dp"
             android:layout_height="0dp"
-            app:layout_constraintDimensionRatio="1:1"/>
+            app:layout_constraintDimensionRatio="1:1"
+            android:contentDescription="@string/description_create_group" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
