--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -19,99 +19,92 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textfield.TextInputEditText
+    <EditText
+        app:layout_constraintTop_toTopOf="@id/emojiImgView"
         android:imeOptions="actionSend"
-        android:id="@+id/msgTextInputEditText"
+        android:id="@+id/msgEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/size_small_8dp"
-        android:layout_marginLeft="@dimen/size_small_8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:ems="10"
         android:hint="@string/hint_message"
-        android:inputType="textMultiLine"
-        android:maxLines="4"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/uploadFileImgButton"
-        app:layout_constraintStart_toEndOf="@id/emojiImgButton" />
-    <ImageButton
-        android:background="@drawable/emoji"
+        app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
+        app:layout_constraintRight_toLeftOf="@id/uploadFileImgButton"
+        app:layout_constraintLeft_toRightOf="@id/emojiImgView"
+        android:inputType="text" />
+    <ImageView
+        android:padding="@dimen/size_small_8dp"
+        android:src="@drawable/emoji"
         android:contentDescription="@string/description_emoji_icon"
-        android:id="@+id/emojiImgButton"
-        android:layout_width="30dp"
+        android:id="@+id/emojiImgView"
+        android:layout_width="@dimen/size_huge_48dp"
         android:layout_height="0dp"
-        android:layout_marginStart="@dimen/size_small_8dp"
-        android:layout_marginLeft="@dimen/size_small_8dp"
-        android:layout_marginBottom="@dimen/size_small_8dp"
-        app:layout_constraintBottom_toBottomOf="@id/msgTextInputEditText"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="h,1:1"
         app:layout_constraintStart_toStartOf="parent"
         />
 
-    <ImageButton
-        android:background="@drawable/photo"
-        android:contentDescription="@string/description_attach_picture_icon"
+    <ImageView
         android:id="@+id/pictureImgButton"
-        android:layout_width="25dp"
+        android:layout_width="36dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="@dimen/size_small_8dp"
-        android:layout_marginRight="@dimen/size_small_8dp"
-        android:layout_marginBottom="@dimen/size_small_8dp"
-        app:layout_constraintBottom_toBottomOf="@id/msgTextInputEditText"
-        app:layout_constraintDimensionRatio="w,1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@id/voiceImgButton" />
+        android:src="@drawable/photo"
+        android:contentDescription="@string/description_attach_picture_icon"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp"
+        app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/emojiImgView" />
 
-    <ImageButton
-        android:background="@drawable/send"
+    <ImageView
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp"
+        android:src="@drawable/send"
         android:contentDescription="@string/description_send_icon"
-        android:id="@+id/sendMsgImgButton"
-        android:layout_width="0dp"
+        android:id="@+id/sendMsgImgView"
+        android:layout_width="36dp"
         android:layout_height="0dp"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/pictureImgButton"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="@id/pictureImgButton"
-        app:layout_constraintStart_toStartOf="@id/pictureImgButton"
-        app:layout_constraintTop_toTopOf="@id/pictureImgButton"/>
+        app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
+        app:layout_constraintRight_toRightOf="@id/pictureImgButton"
+        app:layout_constraintLeft_toLeftOf="@id/pictureImgButton"
+        app:layout_constraintTop_toTopOf="@id/emojiImgView"/>
 
-    <ImageButton
-        android:background="@drawable/mic"
-        android:contentDescription="@string/description_attach_voice_icon"
-        android:layout_marginRight="@dimen/size_icon_space_5dp"
+    <ImageView
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp"
         android:id="@+id/voiceImgButton"
-        android:layout_width="0dp"
+        android:layout_width="36dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@id/pictureImgButton"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toStartOf="@id/pictureImgButton"
-        app:layout_constraintStart_toEndOf="@id/uploadFileImgButton"
-        app:layout_constraintTop_toTopOf="@id/pictureImgButton"
-        android:layout_marginEnd="@dimen/size_icon_space_5dp" />
+        android:src="@drawable/mic"
+        android:contentDescription="@string/description_attach_voice_icon"
+        app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
+        app:layout_constraintRight_toLeftOf="@id/pictureImgButton"
+        app:layout_constraintTop_toTopOf="@id/emojiImgView" />
 
-    <ImageButton
-        android:background="@drawable/attach_file"
-        android:contentDescription="@string/description_attach_file_icon"
-        android:layout_marginRight="@dimen/size_icon_space_5dp"
+    <ImageView
         android:id="@+id/uploadFileImgButton"
-        android:layout_width="0dp"
+        android:layout_width="36dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@id/pictureImgButton"
-        app:layout_constraintDimensionRatio="w,1:1"
-        app:layout_constraintEnd_toStartOf="@id/voiceImgButton"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/pictureImgButton"
-        android:layout_marginEnd="@dimen/size_icon_space_5dp" />
+        android:contentDescription="@string/description_attach_file_icon"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp"
+        android:src="@drawable/attach_file"
+        app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
+        app:layout_constraintRight_toLeftOf="@id/voiceImgButton"
+        app:layout_constraintTop_toTopOf="@id/emojiImgView" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/msgTextInputEditText"
+        app:layout_constraintBottom_toTopOf="@id/emojiImgView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
