--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -29,7 +29,7 @@
 
             <TextView
                 app:layout_constraintTop_toTopOf="@id/avatarImgView"
-                android:id="@+id/nameTextView"
+                android:id="@+id/groupNameEditText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/size_medium_16dp"
@@ -42,7 +42,7 @@
                 app:layout_constraintStart_toEndOf="@id/avatarImgView" />
 
             <TextView
-                app:layout_constraintTop_toBottomOf="@id/nameTextView"
+                app:layout_constraintTop_toBottomOf="@id/groupNameEditText"
                 android:id="@+id/descTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -53,7 +53,7 @@
                 android:textSize="@dimen/size_small_text_10sp"
                 app:layout_constraintBottom_toBottomOf="@+id/avatarImgView"
                 app:layout_constraintEnd_toStartOf="@id/postStatusImgView"
-                app:layout_constraintStart_toStartOf="@id/nameTextView"
+                app:layout_constraintStart_toStartOf="@id/groupNameEditText"
                 app:layout_constraintVertical_bias="0.0" />
 
             <ImageButton
