--- a/app/src/main/res/layout/item_select_contact.xml
+++ b/app/src/main/res/layout/item_select_contact.xml
@@ -19,7 +19,7 @@
 
         app:layout_constraintTop_toTopOf="parent" />
     <TextView
-        android:id="@+id/nameTextView"
+        android:id="@+id/groupNameEditText"
         android:layout_marginRight="@dimen/size_medium_16dp"
         android:layout_marginLeft="@dimen/size_medium_16dp"
         app:layout_constraintRight_toLeftOf="@id/radioButton"
@@ -29,6 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content" />
     <RadioButton
+        android:clickable="false"
         android:id="@+id/radioButton"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/avatarImgView"
