--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -96,17 +96,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:contentDescription="@string/description_clear_text_icon"
-        android:layout_marginBottom="@dimen/size_small_8dp"
         android:id="@+id/clearTextImgButton"
-        android:layout_width="30dp"
+        android:layout_width="@dimen/size_huge_48dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:contentDescription="@string/description_clear_text_icon"
+        android:padding="9dp"
+        android:src="@drawable/clear"
         app:layout_constraintBottom_toBottomOf="@id/phoneTextInputLayout"
         app:layout_constraintDimensionRatio="h,1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/clear" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/swapButton"
