--- a/app/src/main/res/layout/sub_fragment_official_account.xml
+++ b/app/src/main/res/layout/sub_fragment_official_account.xml
@@ -35,7 +35,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/groupNameEditText"
+                android:id="@+id/nameTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/size_medium_16dp"
