--- a/app/src/main/res/layout/item_user_icon.xml
+++ b/app/src/main/res/layout/item_user_icon.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_marginEnd="@dimen/size_small_8dp"
+    android:layout_marginRight="@dimen/size_small_8dp"
     android:id="@+id/itemUserIconRootLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
