--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#3489eb</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorSendMessageBg">#00BFFF</color>
-    <color name="colorBackground">#dadfe8</color>
+    <color name="colorBackground">#f2f4f7</color>
     <color name="colorTextGrey">#848991</color>
 </resources>
