--- a/app/src/main/res/layout/fragment_diary.xml
+++ b/app/src/main/res/layout/fragment_diary.xml
@@ -2,5 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+<Button
+    android:id="@+id/logoutButton"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="logout"/>
+    <Button
+        android:id="@+id/addStickerSet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="add sticker set"/>
 </LinearLayout>
